Update whishlist and add fix navigation

--- a/about/index.html
+++ b/about/index.html
@@ -7,5 +7,5 @@
 <a href=/projects/>Projects</a>
 //
 <a href=/whishlist/>Whishlist</a></nav><main><header><h1>About</h1></header><article></article><hr><nav><span>Previous</span>-
-<a href=$%7bBASE_URL%7d/>Up</a>
--<a href=$%7bBASE_URL%7d/whishlist/>Next</a></nav></main><footer><hr><p>This work is licensed under <a href=https://creativecommons.org/publicdomain/zero/1.0/>CC0</a>.</p></footer></body></html>
+<a href=www.radicalteaport.be.eu.org/>Up</a>
+-<a href=www.radicalteaport.be.eu.org/whishlist/>Next</a></nav></main><footer><hr><p>This work is licensed under <a href=https://creativecommons.org/publicdomain/zero/1.0/>CC0</a>.</p></footer></body></html>
