--- a/notes/dutch-class/index.html
+++ b/notes/dutch-class/index.html
@@ -6,6 +6,6 @@
 //
 <a href=/projects/>Projects</a>
 //
-<a href=/whishlist/>Whishlist</a></nav><main><header><h1>Dutch class</h1></header><article><ul><li><a href=$%7bBASE_URL%7d/notes/dutch-class/lesson-1/>Lesson 1</a></li><li><a href=$%7bBASE_URL%7d/notes/dutch-class/lesson-2/>Lesson 2</a></li></ul></article><hr><nav><span>Previous</span>-
-<a href=$%7bBASE_URL%7d/notes/>Up</a>
+<a href=/whishlist/>Whishlist</a></nav><main><header><h1>Dutch class</h1></header><article><ul><li><a href=www.radicalteaport.be.eu.org/notes/dutch-class/lesson-1/>Lesson 1</a></li><li><a href=www.radicalteaport.be.eu.org/notes/dutch-class/lesson-2/>Lesson 2</a></li></ul></article><hr><nav><span>Previous</span>-
+<a href=www.radicalteaport.be.eu.org/notes/>Up</a>
 -<span>Next</span></nav></main><footer><hr><p>This work is licensed under <a href=https://creativecommons.org/publicdomain/zero/1.0/>CC0</a>.</p></footer></body></html>
