--- a/notes/dutch-class/lesson-1/index.html
+++ b/notes/dutch-class/lesson-1/index.html
@@ -11,6 +11,6 @@
 <code>ik ook heb</code> is wrong
 <code>ik heb ook</code> is correct</p></aside><aside class=tip><header>💡
 <strong>Tip</strong></header><p>In regular construction verb is always in the second position</p></aside><ul><li>ik ben geboren op -> <strong>op</strong> with dates, <strong>om</strong> with time</li><li>beroop -> profession</li><li>werk bij / werk voor</li></ul><aside class=tip><header>💡
-<strong>Tip</strong></header><p>When conjugating verbs, the plural form is the same as the infinitive</p></aside><ul><li><p><code>U</code> (formal of <code>jij</code>) is not used (much) in Flemish</p></li><li><p>ik probert om niet te laat te zijn</p></li></ul></article><hr><nav><a href=$%7bBASE_URL%7d/notes/dutch-class/lesson-2/>Previous</a>-
-<a href=$%7bBASE_URL%7d/notes/dutch-class/>Up</a>
+<strong>Tip</strong></header><p>When conjugating verbs, the plural form is the same as the infinitive</p></aside><ul><li><p><code>U</code> (formal of <code>jij</code>) is not used (much) in Flemish</p></li><li><p>ik probert om niet te laat te zijn</p></li></ul></article><hr><nav><a href=www.radicalteaport.be.eu.org/notes/dutch-class/lesson-2/>Previous</a>-
+<a href=www.radicalteaport.be.eu.org/notes/dutch-class/>Up</a>
 -<span>Next</span></nav></main><footer><hr><p>This work is licensed under <a href=https://creativecommons.org/publicdomain/zero/1.0/>CC0</a>.</p></footer></body></html>
