--- a/projects/personal-website/personal-website/index.html
+++ b/projects/personal-website/personal-website/index.html
@@ -10,5 +10,5 @@
 The content is generated from my <a href=https://obsidian.md/>Obsidian vault</a>, which is a collection of notes, articles, and
 other resources that I find useful.</p><p>The site is hosted on <a href=https://pages.github.com/>GitHub Pages</a> and the custom domain name is registered with
 <a href=https://www.eu.org/>eu.org</a> for free.</p><p>DNS is managed by <a href=https://www.cloudflare.com/>Cloudflare</a> free plan.</p><p>The source code for this site is available on <a href>GitHub</a>.</p><p>The design is minimalistic and inspired by various other personal websites and simple HTML pages I found online:</p><ul><li><a href=https://perfectmotherfuckingwebsite.com/>Perfect Motherfucking Website</a></li><li><a href=https://vimhelp.org/>VimHelp</a></li><li><a href=https://nih.ar>Nih.ar</a></li><li><a href=https://ig.emnace.org/index.html>ig.emnace</a></li><li><a href=https://coleroberts.dev/index>Cole roberts dev</a></li></ul></article><hr><nav><span>Previous</span>-
-<a href=$%7bBASE_URL%7d/projects/>Up</a>
+<a href=www.radicalteaport.be.eu.org/projects/>Up</a>
 -<span>Next</span></nav></main><footer><hr><p>This work is licensed under <a href=https://creativecommons.org/publicdomain/zero/1.0/>CC0</a>.</p></footer></body></html>
