--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,6 @@
 //
 <a href=/projects/>Projects</a>
 //
-<a href=/whishlist/>Whishlist</a></nav><main><header><h1>Projects</h1></header><article><p>Here you can find a list of the projects I&rsquo;m currently spending time on.</p><ul><li><a href=$%7bBASE_URL%7d/projects/personal-website/personal-website/>Personal Website</a></li></ul></article><hr><nav><span>Previous</span>-
-<a href=$%7bBASE_URL%7d/>Up</a>
+<a href=/whishlist/>Whishlist</a></nav><main><header><h1>Projects</h1></header><article><p>Here you can find a list of the projects I&rsquo;m currently spending time on.</p><ul><li><a href=www.radicalteaport.be.eu.org/projects/personal-website/personal-website/>Personal Website</a></li></ul></article><hr><nav><span>Previous</span>-
+<a href=www.radicalteaport.be.eu.org/>Up</a>
 -<span>Next</span></nav></main><footer><hr><p>This work is licensed under <a href=https://creativecommons.org/publicdomain/zero/1.0/>CC0</a>.</p></footer></body></html>
